# pygments-systemrdl

./: .travis.yml  README.md  pyproject.toml  setup.py
.github/workflows/: build.yml
rdl_pygments/: rdllexer.py
